[package]
name = "clatune"
version = "0.1.0"
description = "Tune your instrument in a cool way"
authors = ["Cladamos"]
license = "MIT"
edition = "2024"
repository = "https://github.com/cladamos/clatune"
readme = "README.md"
keywords = ["tui", "ratatui", "guitar", "tuner", "audio"]
categories = ["multimedia::audio", "command-line-utilities"]

[dependencies]
color-eyre = "0.6.3"
cpal = { git = "https://github.com/RustAudio/cpal.git", rev = "63ea9fff", features = ["pulseaudio", "pipewire"] }
crossterm = "0.29.0"
derive_setters = "0.1.9"
pitch-detection = "0.3.0"
pitch_calc = "0.12.0"
ratatui = "0.30.0"
tui-big-text = "0.8.2"
